handle auth tokens in context

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
       "esnext.asynciterable"
     ],
     "typeRoots": [
-      "./types",
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./types"
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
