--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwks-rsa": "^1.3.0"
   },
   "devDependencies": {
+    "@types/auth0": "^2.9.4",
     "@types/graphql": "^14.0.1",
     "@types/node": "^10.11.4",
     "tsc-watch": "^1.0.29",
