--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Equiem/apollo-auth0-extension#readme",
   "dependencies": {
     "apollo-server": "^2.1.0",
+    "express": "^4.16.3",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.3.0"
