--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-server": "^2.1.0",
     "express": "^4.16.3",
     "graphql": "^14.0.2",
+    "inversify": "^4.13.0",
     "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.3.0",
     "runtypes": "^2.1.6"
@@ -39,6 +40,9 @@
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "mocha-typescript": "^1.1.17",
+    "mock-jwks": "^0.1.6",
+    "nock": "^10.0.0",
+    "node-rsa": "^1.0.1",
     "nyc": "^13.0.1",
     "reflect-metadata": "^0.1.12",
     "source-map-support": "^0.5.9",
@@ -64,7 +68,7 @@
     ],
     "sourceMap": true,
     "checkCoverage": true,
-    "branches": 64,
+    "branches": 60,
     "functions": 70,
     "lines": 70,
     "statements": 70,
