--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "devDependencies": {
     "@types/auth0": "^2.9.4",
+    "@types/chai": "^4.1.6",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^10.11.4",
@@ -40,13 +42,12 @@
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "mocha-typescript": "^1.1.17",
-    "mock-jwks": "^0.1.6",
     "nock": "^10.0.0",
-    "node-rsa": "^1.0.1",
+    "node-mocks-http": "^1.7.2",
     "nyc": "^13.0.1",
     "reflect-metadata": "^0.1.12",
+    "sinon": "^6.3.5",
     "source-map-support": "^0.5.9",
-    "testdouble": "^3.8.1",
     "tsc-watch": "^1.0.29",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
