--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf dist",
     "compile": "npm run clean && tsc",
     "lint": "tslint -p .",
-    "test": "npm run lint && npm run mocha",
+    "test": "npm run lint && npm run mocha && bin/no-tracked-changes",
     "mocha": "npm run compile && bin/nyc-mocha --opts $npm_package_config_mochaOpts",
     "watch": "npm run clean && tsc-watch --onSuccess 'echo Compiled successfully!' --onFailure 'echo Compilation failed!'"
   },
