--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           key: npm-v1-{{ checksum "package-lock.json" }}
       - run:
           name: Install node modules
-          command: npm install
+          command: npm ci
       - save_cache:
           key: npm-v1-{{ checksum "package-lock.json" }}
           paths:
