--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/Equiem/express-apollo-auth0-integration#readme",
   "dependencies": {
-    "apollo-server": "^2.1.0",
     "express": "^4.16.3",
-    "graphql": "^14.0.2",
     "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.3.0",
     "runtypes": "^2.1.6"
+  },
+  "peerDependencies": {
+    "apollo-server": "^2.1.0",
+    "graphql": "^14.0.2"
   },
   "devDependencies": {
     "@types/auth0": "^2.9.4",
@@ -36,8 +38,10 @@
     "@types/graphql": "^14.0.1",
     "@types/jsonwebtoken": "^7.2.8",
     "@types/node": "^10.11.4",
+    "apollo-server": "^2.1.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "graphql": "^14.0.2",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "mocha-typescript": "^1.1.17",
